[package]
name = "html-ast"
version = "0.1.0"
description = "Construct and generate legal html string"
repository = "https://github.com/oovm/zhihu-markdown/blob/dev/projects/htmler"
documentation = "https://docs.rs/html-ast"
readme = "readme.md"
keywords = [
    "html",
    "css",
]
authors = [
    "Aster <192607617@qq.com>",
]
license = "MPL-2.0"
edition = "2021"


[dependencies]

[features]
default = []