[package]
name = "html-ast"
version = "0.1.0"
description = "Construct and generate legal html string"
repository = "https://github.com/oovm/htmler/blob/dev/projects/html-ast"
documentation = "https://docs.rs/html-ast"
readme = "readme.md"
keywords = [
    "html",
]
authors = [
    "Aster <192607617@qq.com>",
]
license = "MPL-2.0"
edition = "2021"


[dependencies]

[features]
default = []