[package]
name = "htmler"
version = "0.1.0"
description = "HTML parsing and querying with CSS selectors"
repository = "https://github.com/oovm/zhihu-markdown/blob/dev/projects/htmler"
documentation = "https://docs.rs/htmler"
keywords = [
    "html",
    "css",
    "selector",
    "scraping"
]
authors = [
    "Aster <192607617@qq.com>",
    "June McEnroe <june@causal.agency>",
]
license = "ISC"
edition = "2021"
readme = "readme.md"

[dependencies]
cssparser = "0.29.6"
ego-tree = "0.6.2"
html5ever = "0.26"
selectors = "0.24.0"
smallvec = "1.10.0"
tendril = "0.4.3"
indexmap = "1.9.3"

[features]
default = []