[package]
name = "zhihu-link"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/sub_projects"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
tokio = { version = "1.27.0", features = ["full"] }
reqwest = "0.11.16"
scraper = "0.16.0"
ego-tree = "0.6.2"

[dev-dependencies]

[features]
default = []
