[package]
name = "zhihu-link"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/sub_projects"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
serde_json = "1.0.96"
reqwest = "0.11.16"
ego-tree = "0.6.2"

[dependencies.htmler]
version = "0.1.0"
path = "../htmler"

[dev-dependencies]
tokio = { version = "1.27.0", features = ["full"] }

[features]
default = []
